[HP-5] Linked user and pet
